# store_manager

./: Cargo.toml  README.md  store.db  store_data.json
src/: api.rs  db.rs  db_filler.rs  main.rs  server.rs  structs.rs
src/web/: index.html
