[package]
name = "store_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8.6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = "0.6.6"
